Fix horizontal scroll bug

--- a/apps/atom/config/styles.less
+++ b/apps/atom/config/styles.less
@@ -27,7 +27,7 @@ atom-text-editor {
     }
 
     .vertical-scrollbar {
-        display: none;
+        visibility: hidden;
     }
 }
 
